<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fullContainer"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.ajszoke.macrohub.ManualMacroInputActivity">

    <TextView
        android:id="@+id/manualHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_input_macros"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="11dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manualHeading">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/workContainer"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/workDayTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="24sp"
                android:text="@string/day_name_workout"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/workProTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="38dp"
                android:layout_marginStart="38dp"
                android:layout_marginTop="8dp"
                android:text="@string/macro_protein"
                android:textColor="@color/colorProtein"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/workProInput"
                app:layout_constraintLeft_toLeftOf="@+id/workDayTextView"
                app:layout_constraintTop_toTopOf="@+id/workProInput"/>

            <TextView
                android:id="@+id/workCarbsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="38dp"
                android:layout_marginStart="38dp"
                android:layout_marginTop="8dp"
                android:text="@string/macro_carbs"
                android:textColor="@color/colorCarbs"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="@+id/workDayTextView"
                app:layout_constraintTop_toTopOf="@+id/workCarbsInput"/>

            <TextView
                android:id="@+id/workFatTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="38dp"
                android:layout_marginStart="38dp"
                android:layout_marginTop="8dp"
                android:text="@string/macro_fat"
                android:textColor="@color/colorFat"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/workFatInput"
                app:layout_constraintLeft_toLeftOf="@+id/workDayTextView"
                app:layout_constraintTop_toTopOf="@+id/workFatInput"/>

            <EditText
                android:id="@+id/workProInput"
                android:layout_width="69dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:hint="@string/unit_grams"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintLeft_toRightOf="@+id/workProTextView"
                app:layout_constraintRight_toRightOf="@+id/workDayTextView"
                app:layout_constraintTop_toBottomOf="@+id/workDayTextView"/>

            <EditText
                android:id="@+id/workCarbsInput"
                android:layout_width="69dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/unit_grams"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/workCarbsTextView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/workProInput"
                app:layout_constraintRight_toRightOf="@+id/workProInput"
                app:layout_constraintTop_toBottomOf="@+id/workProInput"
                app:layout_constraintVertical_bias="0.0"/>

            <EditText
                android:id="@+id/workFatInput"
                android:layout_width="69dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/unit_grams"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="@+id/workProInput"
                app:layout_constraintTop_toBottomOf="@+id/workCarbsInput"/>

            <android.support.constraint.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="7dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/workFatInput">

                <TextView
                    android:id="@+id/workTotTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/day_cals_total_workout"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/workTotCals"/>

                <TextView
                    android:id="@+id/workTotCals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="0"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/workTotTextView"
                    app:layout_constraintRight_toRightOf="parent"/>
            </android.support.constraint.ConstraintLayout>

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/restContainer"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/workContainer">

            <TextView
                android:id="@+id/restDayTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/day_name_rest"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/restProTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="38dp"
                android:layout_marginStart="38dp"
                android:layout_marginTop="8dp"
                android:text="@string/macro_protein"
                android:textColor="@color/colorProtein"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/restCarbsInput"
                app:layout_constraintLeft_toLeftOf="@+id/restDayTextView"
                app:layout_constraintTop_toTopOf="@+id/restProInput"/>

            <TextView
                android:id="@+id/restCarbsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="38dp"
                android:layout_marginStart="38dp"
                android:layout_marginTop="8dp"
                android:text="@string/macro_carbs"
                android:textColor="@color/colorCarbs"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/restFatInput"
                app:layout_constraintLeft_toLeftOf="@+id/restDayTextView"
                app:layout_constraintTop_toTopOf="@+id/restCarbsInput"/>

            <TextView
                android:id="@+id/restFatTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="38dp"
                android:layout_marginStart="38dp"
                android:layout_marginTop="8dp"
                android:text="@string/macro_fat"
                android:textColor="@color/colorFat"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="@+id/restDayTextView"
                app:layout_constraintTop_toBottomOf="@+id/restCarbsInput"/>

            <EditText
                android:id="@+id/restProInput"
                android:layout_width="69dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:hint="@string/unit_grams"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintLeft_toRightOf="@+id/restProTextView"
                app:layout_constraintRight_toRightOf="@+id/restDayTextView"
                app:layout_constraintTop_toBottomOf="@+id/restDayTextView"/>

            <EditText
                android:id="@+id/restCarbsInput"
                android:layout_width="69dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/unit_grams"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/restCarbsTextView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/restProInput"
                app:layout_constraintRight_toRightOf="@+id/restProInput"
                app:layout_constraintTop_toBottomOf="@+id/restProInput"
                app:layout_constraintVertical_bias="0.0"/>

            <EditText
                android:id="@+id/restFatInput"
                android:layout_width="69dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/unit_grams"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:singleLine="false"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/restFatTextView"
                app:layout_constraintLeft_toLeftOf="@+id/restProInput"
                app:layout_constraintTop_toBottomOf="@+id/restCarbsInput"
                app:layout_constraintVertical_bias="0.0"/>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/restFatInput">

                <TextView
                    android:id="@+id/restTotTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/day_cals_total_rest"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/restTotCals"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/restTotCals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="0"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/restTotTextView"
                    app:layout_constraintRight_toRightOf="parent"/>
            </android.support.constraint.ConstraintLayout>

        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/ManualMacroInputContinueBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/prompt_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"/>

</android.support.constraint.ConstraintLayout>
